# sax-buddy-service

./: .dockerignore  .eslintrc.js  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  README.md  eslint.config.js  firebase copy.json  firebase.json  main.py  openapi.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  run_server.py  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
docs/: ImplementationAnalysis.md  InitialAssessment.md
src/: dependencies.py  index.ts  logging_config.py  main.py
src/__mocks__/: essentia.js.ts
src/api/: openapi.py
src/auth/: __init__.py  dependencies.py  exceptions.py  firebase_auth.py  middleware.py  models.py  utils.py
src/exceptions/: __init__.py
src/middleware/: __init__.py  auth_middleware.py  logging_middleware.py
src/models/: assessment.py  base.py  content.py  performance.py  reference.py  user.py
src/repositories/: assessment_repository.py  content_repository.py  performance_repository.py  reference_repository.py  user_repository.py
src/services/: AssessmentProcessor.ts  FirestoreService.ts  SaxophoneAudioAnalyzer.ts  StorageService.ts  assessment_service.py  content_service.py  performance_service.py  reference_service.py  user_service.py
src/tests/: SaxophoneAudioAnalyzer.test.ts
src/types/: analysis.ts  analyzer.ts  api.ts  assessment.ts  essentia.d.ts  index.ts
src/utils/: logger.ts
tests/integration/: README.md  conftest.py  requirements.txt  test_assessment_repository.py  test_content_repository.py  test_performance_repository.py  test_reference_repository.py  (+1 more)
(+36 files in other folders)
